# pharmix

./: package.json  pnpm-lock.yaml
src/: App.svelte
src-tauri/: .env  Cargo.toml  crud.db  tauri.conf.json
src-tauri/db/: crud.db
src-tauri/migrations/2022-07-22-064751_create_users/: up.sql
src-tauri/migrations/2022-07-22-112848_create_posts/: up.sql
src-tauri/migrations/2022-08-28-163233_create_drug/: down.sql  up.sql
src-tauri/migrations/2022-09-14-211413_populatedb/: down.sql  up.sql
src-tauri/src/: graphql_schema.rs  lib.rs  main.rs  models.rs  schema.rs  schemaql.rs
